# SiWECAL_p_AHCAL_Sim

./: .gitignore  README  README.md  init_ilcsoft_v02-03-02_g103_flags17.sh
analysis/ECAL_Sim/: analysis.C  res_mol_plots.C  resolutions.C  run_analysis.sh
analysis/ECAL_Sim/PIDNTuples/: NTuples_PID_100_GeV_e_pi_mu_macro.sh  NTuples_PID_150_GeV_e_pi_mu_macro.sh  NTuples_PID_1_to_10_GeV_macro.sh  NTuples_PID_6_40_150_GeV_e_macro.sh  NTuples_PID_6_60_100_GeV_e_pi_mu_macro.sh  NTuples_PID_6_60_100_GeV_e_pi_mu_neutron_macro.sh  NTuples_PID_6_60_150_GeV_e_macro.sh  NTuples_PID_6_60_150_e_macro.sh  NTuples_PID_6_60_150_e_pi_mu_macro.sh  NTuples_PID_6_GeV_e_pi_mu_macro.sh  NTuples_PID_6_GeV_macro.sh  analysis.C  analysis_template.C  analysis_template_old.C  single_histo.C
analysis/ECAL_Sim/ResMolShowAnalysis/: README  analysis.C  analysis_template.C  analysis_template_gaus.C  hadd_results.sh  plots_macro.sh  res_mol_plots.C  res_mol_plots_muerrors.C  run_analysis.sh  run_analysis.sub  run_analysis_condor.sh  single_histo.C
analysis/ECAL_Sim/ShowerStudy/: README.md  analysis_singlefile.C  analysis_template.C  hadd_results.sh  plots_macro.sh  res_mol_plots.C  res_mol_plots_singlefile.C  run_analysis_condor.sh  run_analysis_template.sh
analysis/ML4PID/PSOforECALPID/: SendDESY_PID_100_GeV_e_pi_mu_it0.sh  SendDESY_PID_6_60_100_GeV_e_it0.sh  SendDESY_PID_6_60_100_GeV_e_pi_mu_it0.sh  SendDESY_PID_6_60_100_GeV_e_pi_mu_it1.sh  SendIFIC_Both_PID_6_GeV_e_pi_mu_it0.sh  SendIFIC_PID_0.5_4.5_8.5_GeV_e_nue_neutron_it0.sh  SendIFIC_PID_0.5_to_10GeV_gamma_neutron_pi_LUXE_it0.sh  SendIFIC_PID_0.5_to_10GeV_gamma_neutron_pi_LUXE_it1.sh  Tutorial.md
analysis/ML4PID/PSOforECALPID_4cat/: .gitignore  SendIFIC_Both_PID_6_60_100_GeV_e_pi_mu_neutron_it0.sh  SendIFIC_Both_PID_6_GeV_e_pi_mu_neutron_it0.sh  SendIFIC_Both_PID_6_GeV_kaon_pi_mu_neutron_it0.sh  SendIFIC_ecal_PID_6_60_100_GeV_e_pi_mu_neutron_it0.sh  SendIFIC_ecal_PID_6_60_100_GeV_e_pi_mu_neutron_it1.sh  SendIFIC_hcal_PID_6_60_100_GeV_e_pi_mu_neutron_it0.sh  (+5 more)
generation/: README.md  README_ECAL.md  README_HCAL.md
generation/geometry/: ECAL_commondefs.xml  ECAL_commondefs_11mm.xml  ECAL_commondisp.xml  extra_materials.xml
generation/geometry/2018_SPS_June_AHCAL/: CMakeLists.txt  README  init.sh
generation/geometry/2018_SPS_June_AHCAL/compact/: BeamInstruments.xml  TBModel_SPSJune2018.xml  TestBeamSetup_HCAL.xml  TestBeamSetup_PreShower.xml
generation/geometry/2018_SPS_June_AHCAL/run_sim/: htc_jobSettings.sub  run.sh  sendJob.sh
generation/geometry/2018_SPS_June_AHCAL/run_sim/smalltest/: ddsim_steering_00.py  run_sim.sh
generation/geometry/2018_SPS_June_AHCAL/src/: CaloPrototype_v01.cpp
generation/run_scripts/: condor_config.yml  send_condor.py
masking/: README.md  conf_struct.h  fev10_chip_channel_x_y_mapping.txt  mask.py  masked_channels_TB2022-03_run050282.txt  masked_channels_TB2022-06_run_90474.txt  masker.C  plotmap.cc  readmapping.C
processors/ECAL/: CMakeLists.txt  wrapMarlin.sh
processors/ECAL-e/: README.md  test_Conversion.sh  test_digiLCIO2Build.sh
processors/ECAL/ConversionProcessor/: CMakeLists.txt
processors/ECAL/ConversionProcessor/xml/: conv_TB2022-06_CONF9_mu-_150GeV.xml  conversion_test.xml
processors/ECAL/DigiLCIO2BuildProcessor/lib/: libDigiLCIO2BuildProcessor.so.0.1.0
processors/ECAL/ECAL/: test_Shaping.sh
processors/ECAL/ECAL/ConversionProcessor/include/: ConversionProcessor.hh
processors/ECAL/ECAL/ConversionProcessor/src/: ConversionProcessor.cc
processors/ECAL/ECAL/ConversionProcessor/xml/: FTFP_BERT_conf0_e+_3GeV_0_conv_langauss_testjson.json  mysteer.xml
processors/ECAL/ECAL/LCIO2BuildProcessor/xml/: mysteer.xml
processors/ECAL/ECAL/ShapedConversionProcessor/: CMakeLists.txt
processors/ECAL/ECAL/ShapedConversionProcessor/src/: ShapedConversionProcessor.cc
processors/ECAL/ECAL/lib/: libLCIO2BuildProcessor.so.0.1.0
processors/ECAL/ECAL/run_scripts/: layer_distance.py  prepare_LCIO2Build.py
processors/ECAL/ECAL/run_scripts/LCIO2Build/old/: steering_allenergies.sh
processors/ECAL/ECAL/run_scripts/LCIO2Build/test/: ECAL_QGSP_BERT_conf0_e-_201.7GeV_1.xml  ECAL_QGSP_BERT_conf0_e-_300.0GeV_1.xml  ECAL_QGSP_BERT_conf1_22.8angle_e-_3.0GeV_1.xml  ECAL_QGSP_BERT_conf1_e-_23.5GeV_1.xml  test_100GeV_conf2.xml  test_1GeV_conf2.xml  test_250GeV_conf2.xml  test_300GeV_conf2.xml  test_4GeV_conf2.xml  test_6GeV_conf2.xml
processors/ECAL/ECAL/steering/templates/tests_JP_TB2022-06_CONF6/: LCIO2Build_test.xml
processors/ECAL/ECAL/submit_jobs/: LCIO2build_gen.sh
processors/ECAL/FLATv01Processor/include/: FLATv01Processor.hh
processors/ECAL/LCIO2BuildProcessor/lib/: libLCIO2BuildProcessor.so.0.1.0
processors/ECAL/LCIO2BuildProcessor/mapping/: example.txt
processors/ECAL/LCIO2BuildProcessor/src/: LCIO2BuildProcessor.cc
processors/ECAL/ShapedConversionProcessor/xml/: FTFP_BERT_conf0_e+_3GeV_0_ShapedConversion.xml
processors/ECAL/ShapingProcessor/include/: ShapingProcessor.hh
processors/ECAL/ShapingProcessor/src/: ShapingProcessor.cc
processors/ECAL/lib/: libDigitization.so.1.0
processors/ECAL/run_scripts/: prepare_Conversion.py
processors/ECAL/run_scripts/DigiLCIO2Build/: shaping_test.xml
processors/ECAL/run_scripts/LCIO2Build/test/: ECAL_QGSP_BERT_conf0_e-_23.5GeV_1.xml  shaping_test.xml  test.xml  test_2GeV_conf2.xml  test_50GeV_conf2.xml
processors/ECAL/steering/templates/: Conversion.xml  LCIO2Build_TB2022-03.xml  LCIO2Build_TB2022-06_CONF11.xml  Shaping.xml  Shaping_TB2022-03.xml
processors/ECAL/steering/templates/JP_TB2022-06_CONF6/: LCIO2Build.xml  LCIO2Build.xml~  LCIO2Build_test.xml~
processors/ECAL/steering/templates/tests_JP_TB2022-06_CONF6/: Conversion_test.xml  Conversion_test.xml~  DigiLCIO2Build_test.xml  LCIO2Build_test.xml  LCIO2Build_test.xml~
processors/ECAL/submit_jobs/: LCIO2build_gen.sh  LCIO2build_gen.sh~  prepare_LCIO2Build_loop.sh
processors/ECAL/test_outputs/testfiles/: ShapingProcessor_TESTS.cc
processors/HCAL/: link2CaliceSoft.txt
processors/HCAL_minimal/: test_AHCALLCIO2Build.sh  test_AHCAL_LCIO2Build.sh
processors/combined/: README.md
(+1680 files in other folders)
